# Ray-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  main.cpp
data/pbrt-v3-pbf/: head.pbf
data/pbrt-v3-pbf/pbrt-book/: book.pbf
data/pbrt-v3-pbf/smoke-plume/: plume-084.pbf
images/: image.ppm
nuparu/include/glm/detail/: func_exponential.inl
nuparu/include/openvdb/lib/: libHalf.12.0.0.dylib  libboost_iostreams-clang-darwin61-mt-1_55.dylib  libopenvdb.3.0.dylib  libopenvdb.3.2.0.dylib  libopenvdb_points.0.2.dylib  libz.1.2.7.dylib
nuparu/include/openvdb/share/doc/openvdb/html/: Archive_8h_source.html  BBox_8h_source.html  ChangeBackground_8h_source.html  Clip_8h_source.html  Composite_8h_source.html  Compression_8h_source.html  ConjGradient_8h_source.html  Coord_8h_source.html  CpuTimer_8h_source.html  DDA_8h_source.html  DenseSparseTools_8h_source.html  Dense_8h_source.html  Diagnostics_8h_source.html  Exceptions_8h_source.html  File_8h_source.html  Filter_8h_source.html  FiniteDifference_8h_source.html  Formats_8h_source.html  GridDescriptor_8h_source.html  GridOperators_8h_source.html  GridTransformer_8h_source.html  Grid_8h_source.html  InternalNode_8h_source.html  Interpolation_8h_source.html  Iterator_8h_source.html  LeafManager_8h_source.html  LeafNodeBool_8h_source.html  LeafNodeMask_8h_source.html  LeafNode_8h_source.html  LegacyFrustum_8h_source.html  LevelSetAdvect_8h_source.html  LevelSetFilter_8h_source.html  LevelSetFracture_8h_source.html  LevelSetMeasure_8h_source.html  LevelSetMorph_8h_source.html  LevelSetPlatonic_8h_source.html  LevelSetRebuild_8h_source.html  LevelSetSphere_8h_source.html  LevelSetTracker_8h_source.html  LevelSetUtil_8h_source.html  (+11 more)
nuparu/include/openvdb/share/doc/openvdb/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  (+141 more)
nuparu/include/stb_image/: stb_image.h  stb_image_write.h
nuparu/src/stb_image/: stb_image.c
src/: main.cpp  utility.h
src/accelerators/: aabb.h  bvh.h
src/camera/: camera.h
src/core/: film.h  interaction.h  point.h  scene.cpp  scene.h
src/integrator/: integrator.h
src/integrators/: integrator.cpp  integrator.h  vol_path_integrator.h
src/intersection/: Intersection.h  aabb.h  box.h  bvh.h  cylinder.h  disk.h  hitable_transform.h  mesh.cpp  mesh.h  rectangle.h  scene.h  sphere.h  square.h  triangle.h
src/lights/: diffuse_light.h
src/material/: diffuse_light.h  material.h
src/materials/: material.h
src/math/: constants.h
src/media/: medium.h  phase_function.h
src/memory/: memory_arena.h
src/motion/: motion.h
src/noise/: perlin.h
src/ray/: ray.h  ray_differential.h
src/sampler/: pdf.h  sampler.h
src/samplers/: pdf.h  sampler.cpp  sampler.h
src/screen/: screen.h
src/shape/: line.h  point.h
src/shapes/: Interaction.h  Intersection.h  box.h  bvh.h  cylinder.h  disk.h  hitable_transform.h  line.h  mesh.cpp  mesh.h  rectangle.h  scene.h  sphere.h  triangle.h
src/spectrum/: spectrum.h
src/texture/: texture.h
src/textures/: texture.h
src/transform/: onb.h  transform.h
